--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 #!/usr/bin/env bash
 
-export CONFIG_FILE=
+export CONFIG_FILE=https://s3.amazonaws.com/s3copyinput/config.json
+export AWS_ACCESS_KEY_ID=AKIAJFZS2C2KRRUUB72Q
+export AWS_SECRET_ACCESS_KEY=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
