--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
   "s3copyinput": {
     "region": "us-east-1",
-    "destination": [
+    "sqs": "https://sqs.us-east-1.amazonaws.com/777813915040/qw-inbox-dev-dcp-datapack-mayank",
+    "sqsRegion": "us-east-1",
+    "destinations": [
       "s3copyoutput1",
       "s3copyoutput2"
     ]
